--- a/Hanj3.1.html
+++ b/Hanj3.1.html
@@ -14,7 +14,7 @@
 				<h1><strong>Anjolaoluwa Badaru</strong></h1>
 				<h2>Professional Title </h2> <br>
 				<p>
-					Experienced team leader, with proficiencies in communications, technology and <br> entrepreneurship. An analytica
+					Experienced team leader, with proficiencies in communications, technology and <br> entrepreneurship. An analytical-creative mind executing tasks with a design<br> thinking approach.
 				</p>
 			</td>
 		</tr>
@@ -26,8 +26,8 @@
 					<ul>
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/mail_uhiqgv.png"> anjibee.badaru@gmail.com</li>
 
-						<!--<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li>
---> 
+						<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li>
+
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/skype_nlbvmo.png"> Anjolaoluwa Badaru</li>
 					</ul>
 				</td>
@@ -139,6 +139,7 @@
 
 				</ul>
 				<h3><i>Contact: <strong class="kash">Tayo Oduwole  – <a href="#">tayooduwole@yahoo.com</a></li></strong></i></h3>
+				!<p>
 
 				<br>
 				<br>
