--- a/Hanj3.html
+++ b/Hanj3.html
@@ -26,7 +26,7 @@
 					<ul>
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/mail_uhiqgv.png"> anjibee.badaru@gmail.com</li>
 
-						<!--<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li> "commented update"
+						<<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li> "commented update"
 --> 
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/skype_nlbvmo.png"> Anjolaoluwa Badaru</li>
 					</ul>
