--- a/Hanj3.html
+++ b/Hanj3.html
@@ -14,7 +14,7 @@
 				<h1><strong>Anjolaoluwa Badaru</strong></h1>
 				<h2>Professional Title </h2> <br>
 				<p>
-					Experienced team leader, with proficiencies in communications, technology and <br> entrepreneurship. An analytica
+					Experienced team leader, with proficiencies in communications, technology and <br> entrepreneurship. An analytical-creative mind executing tasks with a design <br> thinking approach.
 				</p>
 			</td>
 		</tr>
@@ -25,9 +25,7 @@
 				<td>
 					<ul>
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/mail_uhiqgv.png"> anjibee.badaru@gmail.com</li>
-
-						<<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li> "commented update"
---> 
+						<li ><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/location_cqmgnd.png"> 11a Tony Enyinna Street, Gbagada, Lagos.</li> 
 						<li><img src="https://res.cloudinary.com/olaa-tech/image/upload/v1567427371/iconzz/skype_nlbvmo.png"> Anjolaoluwa Badaru</li>
 					</ul>
 				</td>
